@@ -13,6 +13,7 @@ Changes for 1.3.4
 -Fixed the vanilla bug: player can get clipped into floor while standing on a block of a down-moving layer
 -Fixed the vanilla bug: NPC can get clipped into floor while standing on a block of a down-moving layer
 -Fence BGOs now can move player together with a moving layer as vine NPCs does
+-Fixed the vanilla bug: attempt of player to jump from NPC standing together with getting pushed into the wall causes the clipping
 
 Changes for 1.3.3.1
 -Fixed a crash, caused by the incremental locked warps counter that leads BGO array exciting
